; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_amd.c_show.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_amd.c_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.attribute = type { i32 }
%struct.threshold_block = type { i32 }
%struct.threshold_attr = type { i32 (%struct.threshold_block*, i8*)* }

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.attribute*, i8*)* @show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show(%struct.kobject* %0, %struct.attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.kobject*, align 8
  %5 = alloca %struct.attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.threshold_block*, align 8
  %8 = alloca %struct.threshold_attr*, align 8
  %9 = alloca i32, align 4
  store %struct.kobject* %0, %struct.kobject** %4, align 8
  store %struct.attribute* %1, %struct.attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.kobject*, %struct.kobject** %4, align 8
  %11 = call %struct.threshold_block* @to_block(%struct.kobject* %10)
  store %struct.threshold_block* %11, %struct.threshold_block** %7, align 8
  %12 = load %struct.attribute*, %struct.attribute** %5, align 8
  %13 = call %struct.threshold_attr* @to_attr(%struct.attribute* %12)
  store %struct.threshold_attr* %13, %struct.threshold_attr** %8, align 8
  %14 = load %struct.threshold_attr*, %struct.threshold_attr** %8, align 8
  %15 = getelementptr inbounds %struct.threshold_attr, %struct.threshold_attr* %14, i32 0, i32 0
  %16 = load i32 (%struct.threshold_block*, i8*)*, i32 (%struct.threshold_block*, i8*)** %15, align 8
  %17 = icmp ne i32 (%struct.threshold_block*, i8*)* %16, null
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = load %struct.threshold_attr*, %struct.threshold_attr** %8, align 8
  %20 = getelementptr inbounds %struct.threshold_attr, %struct.threshold_attr* %19, i32 0, i32 0
  %21 = load i32 (%struct.threshold_block*, i8*)*, i32 (%struct.threshold_block*, i8*)** %20, align 8
  %22 = load %struct.threshold_block*, %struct.threshold_block** %7, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 %21(%struct.threshold_block* %22, i8* %23)
  br label %28

25:                                               ; preds = %3
  %26 = load i32, i32* @EIO, align 4
  %27 = sub nsw i32 0, %26
  br label %28

28:                                               ; preds = %25, %18
  %29 = phi i32 [ %24, %18 ], [ %27, %25 ]
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  ret i32 %30
}

declare dso_local %struct.threshold_block* @to_block(%struct.kobject*) #1

declare dso_local %struct.threshold_attr* @to_attr(%struct.attribute*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
